@@ -17,6 +17,8 @@ Bugfixes:
  * Issue 156: data connection must be closed before sending 226/426 reply.
    This was against RFC-959 and was causing problems with older FTP clients.
 
+ * Issue 162: (FTPS) SSL shutdown() is not invoked for the control connection.
+
 Major API changes since 0.6.0:
 
  * AbstractedFS root and cwd properties can now be set via setattr().
